Added user informations and fixed / added routes
